--- a/python/Dockerfile
+++ b/python/Dockerfile
@@ -2,6 +2,11 @@ FROM python:3.12-slim
 
 WORKDIR /app
 
+# optional aber praktisch (curl für Healthchecks/Debug)
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    curl iputils-ping traceroute \
+  && rm -rf /var/lib/apt/lists/*
+
 RUN apt-get update && apt-get install -y --no-install-recommends curl \
   && rm -rf /var/lib/apt/lists/*
 
